--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,32 @@ authors = ["whatislove118 <oleg.pochikalin@mail.ru>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+websockets = "^10.3"
+certifi = "^2021.10.8"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^4.0.1"
+black = "^22.3.0"
+isort = "^5.10.1"
+
+[tool.black]
+exclude = '''
+/(
+    .git
+  | .mypy_cache
+  | .tox
+  | venv
+  | .venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+# make it compatible with black
+profile = "black" 
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
