--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ websockets = "^10.3"
 certifi = "^2021.10.8"
 aiogram = "^2.20"
 python-dotenv = "^0.20.0"
+autoflake = "^1.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
