--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ certifi = "^2021.10.8"
 aiogram = "^2.20"
 python-dotenv = "^0.20.0"
 autoflake = "^1.4"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
