--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ babel==2.9.1; python_version >= "3.7" and python_full_version < "3.0.0" or pytho
 certifi==2021.10.8
 charset-normalizer==2.0.12; python_full_version >= "3.5.0" and python_version >= "3.7"
 frozenlist==1.3.0; python_version >= "3.7"
+gunicorn==20.1.0; python_version >= "3.5"
 idna==3.3; python_version >= "3.7"
 multidict==6.0.2; python_version >= "3.7"
 pyflakes==2.4.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
