--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "binance-quotation"
 version = "0.1.0"
 description = ""
-authors = ["whatislove118 <oleg.pochikalin@mail.ru>"]
+authors = ["whatislove118 <pochikalin@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -10,13 +10,12 @@ websockets = "^10.3"
 certifi = "^2021.10.8"
 aiogram = "^2.20"
 python-dotenv = "^0.20.0"
-autoflake = "^1.4"
-gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 black = "^22.3.0"
 isort = "^5.10.1"
+autoflake = "^1.4"
 
 [tool.black]
 exclude = '''
