--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,4 +14,11 @@
             "source.organizeImports": true
         }
     },
+    "python.testing.pytestArgs": [
+        "tests",
+        "-v",
+        "-s"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
 }
